# libsmtp

./: AUTHORS  CHANGES  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  configure.in  gnu-head-sm.pnm  gnu-head-sm.xpm  libsmtp.c  libsmtp.h  libsmtp.pc  libsmtp_mime.pc  mkinstalldirs
doc/: API  BUGS  MIME  RFCs  TODO  sasl-mechanisms
doc/CVS/: Entries  Repository
examples/: Makefile  Makefile.in  Need_a_host_called_mail  README  multipart.c  singlepart.c  smtpmail  smtpmail.c  testfile
examples/CVS/: Entries  Repository
include/: libsmtp.h  libsmtp_mime.h
include/CVS/: Entries  Repository
include/CVS/CVS/: Repository  Root
mime/: Makefile  Makefile.in  base64.c  comm.c  mimetest.c  multiparttest.c  parts.c  quoted.c
mime/CVS/: Entries  Repository
smtp/: Makefile  Makefile.in  libsmtp_comm.c  libsmtp_connection.c  libsmtp_data.c  libsmtp_error.c  testapp.c
smtp/CVS/: Entries  Repository
